# Marketplace-Rust

./: README.md  tarpaulin-report.html
marketplace_principal/: Cargo.toml  build_log.txt  dependencies.txt  lib.rs  tarza-ivo.txt  traza.txt
marketplace_principal/src/coverage/debug/.fingerprint/Inflector-9cf1bf422bb2f1cd/: lib-inflector
marketplace_principal/src/coverage/debug/.fingerprint/aho-corasick-e00fbf788c6bf7b3/: lib-aho_corasick
marketplace_principal/src/coverage/debug/.fingerprint/array-bytes-0b2a2a5de71b8ca1/: lib-array_bytes
marketplace_principal/src/coverage/debug/.fingerprint/array-init-a0704642d287c51a/: lib-array_init
marketplace_principal/src/coverage/debug/.fingerprint/arrayref-18996910a82ac920/: lib-arrayref
marketplace_principal/src/coverage/debug/.fingerprint/arrayvec-1294ea7f89fd1a03/: lib-arrayvec
marketplace_principal/src/coverage/debug/.fingerprint/autocfg-3190f2588056f989/: lib-autocfg
marketplace_principal/src/coverage/debug/.fingerprint/bitflags-328ecab904d0935c/: lib-bitflags
marketplace_principal/src/coverage/debug/.fingerprint/blake2-d7b035adcb245f21/: lib-blake2
marketplace_principal/src/coverage/debug/.fingerprint/block-buffer-a8d2f5b910cc3f3b/: lib-block_buffer
marketplace_principal/src/coverage/debug/.fingerprint/byte-slice-cast-209fb405788996bc/: lib-byte_slice_cast
marketplace_principal/src/coverage/tarpaulin/profraws/: marketplace_principal-2de14cff7806322f.exe_11435582276755399406_0-16920.profraw  marketplace_principal-2de14cff7806322f.exe_11448387291246109422_0-472.profraw
(+150 files in other folders)
